--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "html-react-parser": "^5.2.2",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
-    "sonner": "^1.7.1"
+    "redux-toolkit": "^1.1.2",
+    "sonner": "^1.7.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
